# ife-exs

./: .gitignore  CMakeLists.txt  README.md
src/10/10.1/: change-base.c  change-base.h  main.c
src/10/10.2/: complex.c  complex.h  main.c
src/11/11.1/: main.c
src/11/11.2/: cswap.c  cswap.h  main.c
src/11/11.3/: main.c  quadratic.c  quadratic.h
src/11/11.4/: main.c  p2c.c  p2c.h
src/11/11.6/: main.c
src/12/: 12.2.md
src/12/12.1/: main.c
src/12/12.10/: main.c
src/12/12.11/: main.c
src/12/12.12/: extrema.c  extrema.h  main.c  query.c  query.h
src/12/12.13/: main.c
src/12/12.14/: display.c  display.h  main.c
src/12/12.15/: display.c  main.c
src/12/12.16/: main.c
src/12/12.3/: main.c
src/12/12.4/: main.c
src/12/12.5/: main.c
src/12/12.6/: main.c
src/12/12.7/: main.c
src/12/12.8/: bubble-sort.c  bubble-sort.h  main.c
src/12/12.9/: insertion-sort.c  insertion-sort.h  main.c
src/13/13.1/: main.c
src/13/13.10/: main.c
src/13/13.11/: display.c  display.h  main.c  verify.c  verify.h
src/13/13.2/: main.c
src/13/13.3/: main.c
src/13/13.4/: main.c
src/13/13.5/: is_present.c  is_present.h  main.c
src/13/13.6/: main.c
src/13/13.7/: main.c
src/13/13.8/: main.c  roman.c  roman.h
src/13/13.9/: main.c
src/15/15.1/: main.c  vec3.c  vec3.h
src/4/4.1/: main.c
src/4/4.2/: main.c
src/5/5.2/: main.c
src/5/5.4/: main.c
src/5/5.5/: main.c
src/5/5.6/: main.c
src/5/5.7/: main.c
src/5/5.8/: main.c
src/5/5.9/: main.c
src/6/6.1/: main.c
src/6/6.2/: main.c
src/6/6.3/: main.c
src/7/7.1/: main.c
src/7/7.2/: main.c
src/7/7.3/: main.c
src/7/7.4/: main.c
src/7/7.5/: main.c
src/7/7.6/: main.c
src/7/7.7/: main.c
src/7/7.8/: main.c
src/9/9.1/: main.c
src/9/9.2/: main.c
src/9/9.3/: main.c
src/9/9.4/: main.c
src/9/9.5/: main.c
src/9/9.6/: main.c
